# hindsight-clients/go/model_update_document_tags_request.go
@@ -1,159 +1,0 @@
-/*
-Hindsight HTTP API
-
-HTTP API for Hindsight
-
-API version: 0.4.16
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package hindsight
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateDocumentTagsRequest type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateDocumentTagsRequest{}
-
-// UpdateDocumentTagsRequest Request model for updating document tags.
-type UpdateDocumentTagsRequest struct {
-	// New tags to apply to the document and its memory units
-	Tags []string `json:"tags"`
-}
-
-type _UpdateDocumentTagsRequest UpdateDocumentTagsRequest
-
-// NewUpdateDocumentTagsRequest instantiates a new UpdateDocumentTagsRequest object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateDocumentTagsRequest(tags []string) *UpdateDocumentTagsRequest {
-	this := UpdateDocumentTagsRequest{}
-	this.Tags = tags
-	return &this
-}
-
-// NewUpdateDocumentTagsRequestWithDefaults instantiates a new UpdateDocumentTagsRequest object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateDocumentTagsRequestWithDefaults() *UpdateDocumentTagsRequest {
-	this := UpdateDocumentTagsRequest{}
-	return &this
-}
-
-// GetTags returns the Tags field value
-func (o *UpdateDocumentTagsRequest) GetTags() []string {
-	if o == nil {
-		var ret []string
-		return ret
-	}
-
-	return o.Tags
-}
-
-// GetTagsOk returns a tuple with the Tags field value
-// and a boolean to check if the value has been set.
-func (o *UpdateDocumentTagsRequest) GetTagsOk() ([]string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return o.Tags, true
-}
-
-// SetTags sets field value
-func (o *UpdateDocumentTagsRequest) SetTags(v []string) {
-	o.Tags = v
-}
-
-func (o UpdateDocumentTagsRequest) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateDocumentTagsRequest) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["tags"] = o.Tags
-	return toSerialize, nil
-}
-
-func (o *UpdateDocumentTagsRequest) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"tags",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateDocumentTagsRequest := _UpdateDocumentTagsRequest{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateDocumentTagsRequest)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateDocumentTagsRequest(varUpdateDocumentTagsRequest)
-
-	return err
-}
-
-type NullableUpdateDocumentTagsRequest struct {
-	value *UpdateDocumentTagsRequest
-	isSet bool
-}
-
-func (v NullableUpdateDocumentTagsRequest) Get() *UpdateDocumentTagsRequest {
-	return v.value
-}
-
-func (v *NullableUpdateDocumentTagsRequest) Set(val *UpdateDocumentTagsRequest) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateDocumentTagsRequest) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateDocumentTagsRequest) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateDocumentTagsRequest(val *UpdateDocumentTagsRequest) *NullableUpdateDocumentTagsRequest {
-	return &NullableUpdateDocumentTagsRequest{value: val, isSet: true}
-}
-
-func (v NullableUpdateDocumentTagsRequest) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateDocumentTagsRequest) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
